--- a/domain/usecase/build.gradle
+++ b/domain/usecase/build.gradle
@@ -1,3 +1,5 @@
 dependencies {
     implementation project(':model')
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
 }
