--- a/infrastructure/entry-points/reactive-web/build.gradle
+++ b/infrastructure/entry-points/reactive-web/build.gradle
@@ -1,7 +1,56 @@
+plugins {
+    id 'org.springframework.boot'
+    id 'java'
+}
+
+group = 'co.com.pragma.solicitudes.reactive-web'
+version = '1.0.0'
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+}
+
 dependencies {
+    // Módulos internos
     implementation project(':usecase')
     implementation project(':model')
+
+    // WebFlux + Actuator
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+    // Observabilidad
     implementation 'io.micrometer:micrometer-registry-prometheus'
+
+    // OpenAPI (Swagger UI para WebFlux)
+    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.6.0'
+
+    // Validación con Jakarta
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    // MapStruct
+    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+
+    // Lombok
+    compileOnly "org.projectlombok:lombok:${lombokVersion}"
+    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
+    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+
+    // Lombok + MapStruct integración
+    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+
+    // Testing
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'io.projectreactor:reactor-test'
+    implementation 'org.slf4j:slf4j-api:2.0.13'
+    implementation 'ch.qos.logback:logback-classic:1.5.13'
+
+    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.3.0'
+
+}
+
+test {
+    useJUnitPlatform()
 }
