se creo comunicacion con el micro de autenticacion, valida que el usuario exista por medio del id y que coincidad el email

--- a/infrastructure/driven-adapters/r2dbc-mysql/build.gradle
+++ b/infrastructure/driven-adapters/r2dbc-mysql/build.gradle
@@ -14,6 +14,8 @@ dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
     implementation 'org.slf4j:slf4j-api:2.0.13'
     implementation 'ch.qos.logback:logback-classic:1.5.13'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
 }
 
 
