--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -46,3 +46,5 @@ springdoc:
   swagger-ui:
     enabled: true
     path: /swagger-ui.html
+jwt:
+  secret: "${JWT_SECRET:ChangeThisSecretKeyToASecureLongRandomValue!@PrAgma2024}"
