Limpia: quitar llaves AWS del application.yaml y usar variables de entorno

--- a/applications/app-service/build.gradle
+++ b/applications/app-service/build.gradle
@@ -6,6 +6,7 @@ dependencies {
     implementation project(':r2dbc-mysql')
     implementation project(':model')
     implementation project(':usecase')
+    implementation(project(':sqs'))
     implementation 'org.springframework.boot:spring-boot-starter'
     // Flyway for DB migrations (JDBC-based, independent of R2DBC runtime)
     implementation 'org.flywaydb:flyway-core'
