--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -5,6 +5,8 @@ spring:
     name: "solicitudes-service"
   devtools:
     add-properties: false
+  main:
+    allow-bean-definition-overriding: true
   h2:
     console:
       enabled: true
@@ -50,4 +52,17 @@ jwt:
   secret: "${JWT_SECRET:ChangeThisSecretKeyToASecureLongRandomValue!@PrAgma2024}"
 clients:
   autenticacion:
-    base-url: ${AUTENTICACION_BASE_URL:http://autenticacion:8081}
+    base-url: ${AUTENTICACION_BASE_URL:http://localhost:8081}
+aws:
+  region: ap-southeast-2
+  credentials:
+    access-key: ""
+    secret-key: ""
+  sqs:
+    decision-queue-url: "https://sqs.ap-southeast-2.amazonaws.com/601836273907/solicitudes-decisions.fifo"
+    fifo: true
+logging:
+  level:
+    root: INFO
+    co.com.pragma.solicitudes: DEBUG
+# logging.pattern.level: "%5p [corr:%X{X-Correlation-Id}]"   # opcional para mostrar correlation-id en logs
