--- a/infrastructure/entry-points/reactive-web/build.gradle
+++ b/infrastructure/entry-points/reactive-web/build.gradle
@@ -38,7 +38,8 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.3.0'
-
+    implementation platform('software.amazon.awssdk:bom:2.25.62')
+    implementation 'software.amazon.awssdk:sqs'
 }
 
 test {
