se agrego la cantidad de prestamos aprobados con aws y la cantidad de los prestamos

--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -61,10 +61,11 @@ aws:
   sqs:
     decision-queue-url:
     fifo: true
-# 🔽 NUEVO: URLs de las colas que usamos en la opción B (SQS-only)
+    #  NUEVO: URLs de las colas que usamos en la opción B (SQS-only)
     capacity-req-url:
     capacity-res-url:
-
+      # NUEVO: cola de reportes (Standard)
+    reports-queue-url:
 
 logging:
   level:
